--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@ a{
     text-decoration: none;
     color: inherit;
 }
-*{
+
+* {
     margin: 0;
 }
 button {
@@ -33,7 +34,8 @@ img{
 }
 /* HEADER */
 .header{
-    border-bottom: 1px solid #e7e9fc
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 1px 1px rgba(46, 47, 66, 0.16);
 }
 .page-header-container{
     display: flex;
@@ -81,34 +83,51 @@ font-weight: 700;
         display: flex;
         gap: 40px;
 }
-.nav-link{
+.current{
+    position: relative;
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.current::after{
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+
+}
+.nav-link {
     padding: 24px 0 24px;
 }
-.nav-link:hover, 
-.nav-link:focus{
+
+.nav-link:hover,
+.nav-link:focus {
     color: #404bbf;
 }
 
 .address {
     font-style: normal;
     font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #434455;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
 }
-.adress-uli{
+
+.adress-uli {
     display: flex;
     column-gap: 40px;
     padding: 24px 0;
-    gap: 40px
+    gap: 40px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
-.address-link:focus{
+.address-link:focus {
     color: #404bbf;
 }
-
-
 
 
 /* HERO */
@@ -116,83 +135,97 @@ font-weight: 700;
 .effective-solutions-section {
     background: #2e2f42;
     padding: 188px 0;
+    max-width: 1440px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
 }
 
 .first-heading {
-        font-size: 56px;
-        line-height: 1.07;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: #ffffff;
-        max-width: 496px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 48px;
+font-size: 56px;
+line-height: 1.07;
+letter-spacing: 0.02em;
+text-align: center;
+color: #ffffff;
+max-width: 496px;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 48px;
 }
 
 .order-service-btn {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        color: #ffffff;
-        background-color: #4D5AE5;
-        cursor: pointer;
-        border-radius: 4px;
-        padding: 16px 32px;
-        display: block;
-        min-width: 169px;
-        height: 56px;
-        border: none;
-        margin-left: auto;
-        margin-right: auto;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #ffffff;
+background-color: #4D5AE5;
+cursor: pointer;
+border-radius: 4px;
+padding: 16px 32px;
+display: block;
+min-width: 169px;
+height: 56px;
+border: none;
+margin-left: auto;
+margin-right: auto;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 .order-service-btn:hover,
 .order-service-btn:focus{
-    background-color: #404BBF
+background-color: #404BBF
 }
  
 /* CONTENT */
 .section-content{
-    padding: 120px 0
+padding: 120px 0
 }
  .heading-first{
-    position: absolute;
-        width: 1px;
-        height: 1px;
-        margin: -1px;
-        border: 0;
-        padding: 0;
-        white-space: nowrap;
-        clip-path: inset(100%);
-        clip: rect(0 0 0 0);
-        overflow: hidden;
+position: absolute;
+width: 1px;
+height: 1px;
+margin: -1px;
+border: 0;
+padding: 0;
+white-space: nowrap;
+clip-path: inset(100%);
+clip: rect(0 0 0 0);
+overflow: hidden;
  }
 .content-list {
 display: flex;
 gap: 24px;
 }
 
+
 .content-list-item {
 width: calc((100% - 72px) / 4);
 }
 
-
+.list-item-icon{
+display: flex;
+align-items: center;
+justify-content: center;
+height: 112px;
+background-color: #f4f4fd;
+border-radius: 4px;
+border: 1px solid #8e8f99;
+margin-bottom: 8px;
+}
 
 .content-list-heading {
-    font-weight: 500;
+font-weight: 500;
 font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+margin-bottom: 8px;
 }
 
 .content-list-paragraf {
 font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
 }
 /* OUR TEAM */
 
@@ -204,49 +237,78 @@ padding: 120px 0
 
 
 .our-team-uli{
-    display: flex;
-        gap: 24px
+display: flex;
+gap: 24px
 }
 .our-team-heading {
 font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    text-transform: capitalize;
-    font-weight: 500;
-    margin-bottom: 72px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+text-transform: capitalize;
+font-weight: 500;
+margin-bottom: 72px;
 }
 
 .our-team-list {
 background-color: #ffffff;
 width: calc((100% - 72px) / 4);
-    border-radius: 0px 0px 4px 4px;
+border-radius: 0px 0px 4px 4px;
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+
 }
 
 .team-name{
-    font-weight: 500;
+font-weight: 500;
 font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    margin-bottom: 8px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+margin-bottom: 8px;
 }
 
 .team-job{
 font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #434455;
-    text-align: center;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #434455;
+text-align: center;
 }
 .team-nfo{
-    padding: 32px 0;
-    
+padding: 32px 0;
+}
+ .social-links-our-team{
+display: flex;
+justify-content: center;
+gap: 24px;
+
+ }
+ .social-links-our-team-item{
+width: 40px;
+height: 40px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+.social-links-our-team-item-href{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius:50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
+.social-links-our-team-item-href:hover,
+.social-links-our-team-item-href:focus{
+    background-color: #404bbf;
+}
+.icon-item-our-team{
+    fill: #f4f4fd;
+}
 /* OUR PORTFOLIO */
 .our-portfolio-section{
     padding-top: 120px;
@@ -284,7 +346,33 @@ letter-spacing: 0.02em;
 }
  .our-portfolio-li{
     width: calc((100% - 48px) / 3);
+    box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
+
+.our-portfolio-li:hover{
+    transform: translateY(0%);
+}
+
+.our-portfolio-imgdiv{
+    position: relative;
+    overflow: hidden;
+}
+.our-portfolio-imgdiv-paragraf{
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
 
  .our-portfolio-text-container{
     padding: 32px 16px;
@@ -296,6 +384,14 @@ letter-spacing: 0.02em;
     background-color: #2e2f42;
     padding: 100px 0
 }
+
+.footer-titlediv{
+    display: flex;
+    align-items: baseline;
+    margin-right: 120px;
+
+}
+
 .logo-footer {
     display: inline-block;
     font-family: "Raleway", sans-serif;
@@ -315,6 +411,42 @@ letter-spacing: 0.02em;
     width: 264px;
 }
 
+
 .logo-part-footer {
     color: #f4f4fd;
+}
+
+.container-footer-social-media{
+
+}
+.footer-paragraf-social-media{
+    font-weight: 500;
+    line-height: 1.5;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px; 
+}
+.footer-social-media-links-item {
+    display: flex; 
+    gap: 16px;
+}
+.footer-social-media-links-list-item {
+    width: 40px;
+    height: 40px;
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.social-media-links-footer{
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+
+}
+.social-media-links-footer:hover,
+.social-media-links-footer:focus {
+    background-color: #31d0aa;
 }
