--- a/css/styles.css
+++ b/css/styles.css
@@ -136,10 +136,10 @@ font-weight: 700;
     background: #2e2f42;
     padding: 188px 0;
     max-width: 1440px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
     background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
+    background-position: center;
+    background-size: cover;
 }
 
 .first-heading {
@@ -255,7 +255,9 @@ margin-bottom: 72px;
 background-color: #ffffff;
 width: calc((100% - 72px) / 4);
 border-radius: 0px 0px 4px 4px;
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+0px 1px 1px rgba(46, 47, 66, 0.16),
+ 0px 2px 1px rgba(46, 47, 66, 0.08);
 
 }
 
@@ -351,6 +353,13 @@ letter-spacing: 0.02em;
  }
 
 .our-portfolio-li:hover{
+    
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+     0px 1px 1px rgba(46, 47, 66, 0.16),
+      0px 2px 1px rgba(46, 47, 66, 0.08); 
+}
+
+.our-portfolio-imgdiv:hover{
     transform: translateY(0%);
 }
 
@@ -434,7 +443,7 @@ letter-spacing: 0.02em;
 .footer-social-media-links-list-item {
     width: 40px;
     height: 40px;
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .social-media-links-footer{
     display: flex; 
