--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ img{
 /* HEADER */
 .header{
     border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0px 1px 1px rgba(46, 47, 66, 0.16);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .page-header-container{
     display: flex;
@@ -123,7 +123,9 @@ font-weight: 700;
     gap: 40px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.address-link{
+    transition:  250ms cubic-bezier(0.4, 0, 0.2, 1); ;
+}
 .address-link:hover,
 .address-link:focus {
     color: #404bbf;
@@ -137,7 +139,7 @@ font-weight: 700;
     padding: 188px 0;
     
     max-width: 1440px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    background-image:  linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -169,7 +171,7 @@ height: 56px;
 border: none;
 margin-left: auto;
 margin-right: auto;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .order-service-btn:hover,
 .order-service-btn:focus{
@@ -347,24 +349,23 @@ letter-spacing: 0.02em;
         flex-wrap: wrap;
         gap: 24px;
         row-gap: 48px;
+        
 }
  .our-portfolio-li{
     width: calc((100% - 48px) / 3);
     box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translateY(0%);
+    
  }
 
 .our-portfolio-li:hover{
-    
+    transform: translateY(0%);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
      0px 1px 1px rgba(46, 47, 66, 0.16),
       0px 2px 1px rgba(46, 47, 66, 0.08); 
 }
 
-.our-portfolio-imgdiv:hover{
-    transform: translateY(0%);
-}
+
 
 .our-portfolio-imgdiv{
     position: relative;
@@ -394,14 +395,16 @@ letter-spacing: 0.02em;
 /* FOOTER */
 .page-footer-title {
     background-color: #2e2f42;
-    padding: 100px 0
+    padding: 100px 0;
+    display: flex;
 }
 
 .footer-titlediv{
     display: flex;
     align-items: baseline;
-   
+   flex-direction: column;
     margin-right: 120px;
+    margin-left: 150px;
 
 }
 
@@ -430,7 +433,8 @@ letter-spacing: 0.02em;
 }
 
 .container-footer-social-media{
-
+    display: flex;
+    flex-direction: column;
 }
 .footer-paragraf-social-media{
     font-weight: 500;
