--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ font-weight: 700;
     column-gap: 40px;
     padding: 24px 0;
     gap: 40px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 .address-link{
     transition:  250ms cubic-bezier(0.4, 0, 0.2, 1); ;
@@ -139,7 +139,7 @@ font-weight: 700;
     padding: 188px 0;
     
     max-width: 1440px;
-    background-image:  linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    background-image:  linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -315,7 +315,11 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .icon-item-our-team{
     fill: #f4f4fd;
 }
+
+
 /* OUR PORTFOLIO */
+
+
 .our-portfolio-section{
     padding-top: 120px;
         padding-bottom: 120px;
@@ -359,7 +363,7 @@ letter-spacing: 0.02em;
  }
 
 .our-portfolio-li:hover{
-    transform: translateY(0%);
+   
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
      0px 1px 1px rgba(46, 47, 66, 0.16),
       0px 2px 1px rgba(46, 47, 66, 0.08); 
@@ -371,6 +375,12 @@ letter-spacing: 0.02em;
     position: relative;
     overflow: hidden;
 }
+
+.our-portfolio-imgdiv-paragraf:hover{
+    transform: translateY(0%);
+}
+
+
 .our-portfolio-imgdiv-paragraf{
     position: absolute;
     top: 0;
@@ -382,7 +392,7 @@ letter-spacing: 0.02em;
     background-color: #4d5ae5;
     height: 100%;
     width: 100%;
-    transform: translateY(100%);
+    transform: translateY(100%); 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
@@ -396,15 +406,17 @@ letter-spacing: 0.02em;
 .page-footer-title {
     background-color: #2e2f42;
     padding: 100px 0;
+   
+}
+.container-footer{
     display: flex;
 }
-
 .footer-titlediv{
     display: flex;
     align-items: baseline;
    flex-direction: column;
     margin-right: 120px;
-    margin-left: 150px;
+    
 
 }
 
