--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,10 @@ font-weight: 700;
     padding: 24px 0 24px;
 }
 
+.nav-link-item-list{
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
 .nav-link:hover,
 .nav-link:focus {
     color: #404bbf;
