--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@ ul, ol{
 }
 img{
     display:block;
+    max-width: 100%;
+  height: auto;
 }
 
 
@@ -147,6 +149,7 @@ font-weight: 700;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    margin: auto;
 }
 
 .first-heading {
@@ -380,11 +383,6 @@ letter-spacing: 0.02em;
     overflow: hidden;
 }
 
-.our-portfolio-imgdiv-paragraf:hover{
-    transform: translateY(0%);
-}
-
-
 .our-portfolio-imgdiv-paragraf{
     position: absolute;
     top: 0;
@@ -398,7 +396,10 @@ letter-spacing: 0.02em;
     width: 100%;
     transform: translateY(100%); 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+}
+
+.our-portfolio-li:hover .our-portfolio-imgdiv-paragraf{
+    transform: translateY(0%);
 }
 
  .our-portfolio-text-container{
@@ -414,11 +415,10 @@ letter-spacing: 0.02em;
 }
 .container-footer{
     display: flex;
+    align-items: baseline
 }
 .footer-titlediv{
-    display: flex;
-    align-items: baseline;
-   flex-direction: column;
+
     margin-right: 120px;
     
 
@@ -467,7 +467,7 @@ letter-spacing: 0.02em;
 .footer-social-media-links-list-item {
     width: 40px;
     height: 40px;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+   
 }
 .social-media-links-footer{
     display: flex; 
@@ -477,9 +477,12 @@ letter-spacing: 0.02em;
     height: 100%;
     background-color: #4d5ae5;
     border-radius: 50%;
-
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .social-media-links-footer:hover,
 .social-media-links-footer:focus {
     background-color: #31d0aa;
+}
+.svg-footer-icon{
+    fill: #f4f4fd
 }
