--- a/css/styles.css
+++ b/css/styles.css
@@ -116,20 +116,20 @@ font-weight: 700;
 
 .address {
     font-style: normal;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
+    margin-left: auto;
+  }
+
 
 .adress-uli {
     display: flex;
     column-gap: 40px;
     padding: 24px 0;
-    gap: 40px;
-    
 }
 .address-link{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
     transition:  250ms cubic-bezier(0.4, 0, 0.2, 1); ;
 }
 .address-link:hover,
