--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ font-weight: 700;
   }
 
 
-.adress-uli {
+.adress-ul {
     display: flex;
     column-gap: 40px;
     padding: 24px 0;
@@ -130,7 +130,7 @@ font-weight: 700;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    transition:  250ms cubic-bezier(0.4, 0, 0.2, 1); ;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .address-link:hover,
 .address-link:focus {
