--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,8 @@ img{
     margin-left: auto;
     margin-right: auto;
 }
+
+
 /* HEADER */
 .header{
     border-bottom: 1px solid #e7e9fc;
@@ -288,21 +290,28 @@ letter-spacing: 0.02em;
 text-align: center;
 color: #434455;
 text-align: center;
+margin-bottom: 8px;
 }
+
+
 .team-nfo{
 padding: 32px 0;
 }
+
+
  .social-links-our-team{
 display: flex;
 justify-content: center;
 gap: 24px;
-
  }
+
  .social-links-our-team-item{
 width: 40px;
 height: 40px;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
+
+
 .social-links-our-team-item-href{
     width: 100%;
     height: 100%;
@@ -312,7 +321,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-
 }
 
 .social-links-our-team-item-href:hover,
